<resources>
    <string name="app_name">Dugsiile</string>
    <string name="welcome_to_dugsiile">Welcome to Dugsiile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter_correct_email">Ente crorrect email</string>
    <string name="dugsiile">Dugsiile</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="profile_image_icon">profile image icon</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm password</string>
    <string name="Required">*Required</string>
    <string name="next">Next</string>
    <string name="school_name">School name</string>
    <string name="home">Home</string>
    <string name="fees">Fees</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="choose_subjects">Choose Subjects</string>
    <string name="enroll_student">Enroll Student</string>
    <string name="parent_name">Parent Name</string>
    <string name="parent_phone">Parent phone</string>
    <string name="student_phone">Student phone</string>
    <string name="fee">Fee</string>
    <string name="scholarship">Scholarship</string>
    <string name="enroll">Enroll</string>
    <string name="student_name">Student name</string>
    <string name="student_photo">student photo</string>
    <string name="tick_icon">tick icon</string>
    <string name="error_icon">error_icon</string>
    <string name="parent_icon">parent icon</string>
    <string name="delete_student">Delete Student</string>
    <string name="charge_all_paid_students">Charge all paying students</string>
    <string name="charge_single_student">charge single student</string>
    <string name="subjects">Subjects</string>
    <string name="choose_range">choose range</string>
    <string name="search">Search</string>
    <string name="enter_fee">Enter Fee</string>
    <string name="receive">Receive</string>
    <string name="delete_fee">Delete Fee</string>
    <string name="update_student">update_student</string>
    <string name="update">Update</string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!--s=container transform transition-->
    <string name="student_recipient_to">To %1$s</string>
    <string name="student_card_transition_name">student_card_%1$s</string>
    <string name="student_card_detail_transition_name">student_card_detail</string>
</resources>