<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_round_search"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        tools:targetApi="o" />
    <item android:id="@+id/miAddStudent"
        android:title="@string/enroll_student"
        android:icon="@drawable/ic_person_add"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/miChargeAll"
        android:title="@string/charge_all_paid_students"
        android:icon="@drawable/ic_dollar"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/miSignout"
        android:title="@string/sign_out"
        android:icon="@drawable/ic_logout_black"
        app:showAsAction="never"/>
</menu>