<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.SignupFragment"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingBottom="1dp"
            >


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_enroll_student_picture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/profile_image_icon"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_upload_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputLayoutStudent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:layout_marginEnd="2dp"

                app:layout_constraintEnd_toStartOf="@+id/parentInputLayoutStudent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_enroll_student_picture"
                app:startIconDrawable="@drawable/ic_person"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameInputStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/student_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/parentInputLayoutStudent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nameInputLayoutStudent"
                app:layout_constraintTop_toBottomOf="@+id/iv_enroll_student_picture"
                app:startIconDrawable="@drawable/ic_parent"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/parentInputStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/parent_name" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/parentPhoneInputLayoutStudent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@+id/nameInputLayoutStudent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parentInputLayoutStudent"
                app:startIconDrawable="@drawable/ic_baseline_phone_24"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/parentPhoneInputStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/parent_phone" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/studentPhoneInputLayoutStudent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/nameInputLayoutStudent"
                app:layout_constraintTop_toBottomOf="@+id/parentPhoneInputLayoutStudent"
                app:startIconDrawable="@drawable/ic_baseline_phone_24"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/studentPhoneInputStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/student_phone" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/genderInputLayoutStudent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/gender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/nameInputLayoutStudent"
                app:layout_constraintTop_toBottomOf="@+id/studentPhoneInputLayoutStudent">


                <AutoCompleteTextView
                    android:id="@+id/genderInputStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/feeInputLayoutStudent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/nameInputLayoutStudent"
                app:layout_constraintTop_toBottomOf="@+id/genderInputLayoutStudent"
                app:startIconDrawable="@drawable/ic_dollar"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/feeInputStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/fee" />
            </com.google.android.material.textfield.TextInputLayout>


            <CheckBox
                android:id="@+id/scholarship"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scholarship"
                app:layout_constraintStart_toStartOf="@+id/nameInputLayoutStudent"
                app:layout_constraintTop_toBottomOf="@+id/feeInputLayoutStudent" />

            <Button
                android:id="@+id/btnEnroll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/enroll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/nameInputLayoutStudent"
                app:layout_constraintTop_toBottomOf="@+id/scholarship" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>