<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.UpdateStudentFragment"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingBottom="1dp"
            >


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_update_student_picture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/profile_image_icon"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_upload_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updateNameInputLayoutStudent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:layout_marginEnd="2dp"

                app:layout_constraintEnd_toStartOf="@+id/updateParentInputLayoutStudent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_update_student_picture"
                app:startIconDrawable="@drawable/ic_person"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateNameInputStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/student_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updateParentInputLayoutStudent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/updateNameInputLayoutStudent"
                app:layout_constraintTop_toBottomOf="@+id/iv_update_student_picture"
                app:startIconDrawable="@drawable/ic_parent"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateParentInputStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/parent_name" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updateParentPhoneInputLayoutStudent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@+id/updateNameInputLayoutStudent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updateParentInputLayoutStudent"
                app:startIconDrawable="@drawable/ic_baseline_phone_24"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateParentPhoneInputStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/parent_phone" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updateStudentPhoneInputLayoutStudent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/updateNameInputLayoutStudent"
                app:layout_constraintTop_toBottomOf="@+id/updateParentPhoneInputLayoutStudent"
                app:startIconDrawable="@drawable/ic_baseline_phone_24"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateStudentPhoneInputStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/student_phone" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updateGenderInputLayoutStudent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/gender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/updateNameInputLayoutStudent"
                app:layout_constraintTop_toBottomOf="@+id/updateStudentPhoneInputLayoutStudent">


                <AutoCompleteTextView
                    android:id="@+id/updateGenderInputStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/updateFeeInputLayoutStudent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/updateNameInputLayoutStudent"
                app:layout_constraintTop_toBottomOf="@+id/updateGenderInputLayoutStudent"
                app:startIconDrawable="@drawable/ic_dollar"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateFeeInputStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/fee" />
            </com.google.android.material.textfield.TextInputLayout>


            <CheckBox
                android:id="@+id/updateScholarship"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scholarship"
                app:layout_constraintStart_toStartOf="@+id/updateNameInputLayoutStudent"
                app:layout_constraintTop_toBottomOf="@+id/updateFeeInputLayoutStudent" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/updateNameInputLayoutStudent"
                app:layout_constraintTop_toBottomOf="@+id/updateScholarship" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>